add activities filter
